# device_soc_broadcom

./: OAT.xml  README.en.md  README.md
bcm2711/: soc.gni
bcm2711/hardware/: BUILD.gn
bcm2711/hardware/display/: BUILD.gn
bcm2711/hardware/display/src/display_device/: display_composer_vdi_impl.cpp  hdi_drm_composition.cpp  hdi_gfx_composition.cpp
bcm2711/hardware/display/src/display_device/composer/: hdi_gfx_composition.cpp
bcm2711/hardware/display/src/display_gralloc/: allocator.cpp  display_buffer_vdi_impl.cpp  display_gralloc_gbm.cpp  hi_gbm.cpp
bcm2711/hardware/gpu/: BUILD.gn
bcm2711/hardware/gpu/lib64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
bcm2711/small/hal/display/: BUILD.gn
bcm2711/small/hal/display/rpi4_small/: BUILD.gn  display_gralloc.c  display_layer.c
bcm2711/small/hal/media/camera/: product.gni
bcm2711/small/hal/update/: BUILD.gn
bcm2711/standard/hardware/: BUILD.gn
bcm2711/standard/hardware/display/src/display_device/drm/: drm_device.cpp
bcm2711/standard/hardware/display/src/display_gralloc/: drm_allocator.cpp
bcm2711/standard/hardware/gpu/: BUILD.gn
bcm2711/standard/hardware/gpu/lib64/: libGLESv1_CM.so.1.1.0  libgbm.so.1.0.0  libglapi.so.0.0.0
bcm2711/standard/hardware/wifi/: BUILD.gn
bcm2711/standard/hardware/wifi/brcm/: brcmfmac43456-sdio.txt
bcm2835/: soc.gni
common/: BUILD.gn  ptgen.c
common/hal/display/: BUILD.gn
common/hal/media/camera/: BUILD.gn  product.gni
common/hal/media/camera/src/device_manager/: BUILD.gn  bm2835.cpp
common/hal/media/camera/src/driver_adapter/test/: BUILD.gn
common/hal/media/camera/src/pipeline_core/: BUILD.gn
common/hal/update/: BUILD.gn
common/hal/usb/bcm2711/include/: default_config.h
hardware/: BUILD.gn
hardware/display/: BUILD.gn
hardware/display/src/display_device/core/: ._hdi_device_interface.cpp  hdi_layer.h
hardware/display/src/display_device/drm/: drm_device.cpp  drm_display.cpp
hardware/display/src/display_gfx/: display_gfx.c
hardware/display/src/display_gralloc/: display_gralloc_gbm.c
hardware/gpu/: BUILD.gn
hardware/gpu/include/: gbm.h
hardware/gpu/lib/: libEGL.so.1  libGLESv1_CM.so.1  libGLESv2.so.2  libgbm.so.1  libglapi.so.0
hardware/gpu/test/: glmark2-es2-drm
