
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

group("hardware_group") {
  deps = [
#    "//device/rpifdn/hardware/wifi:ap6xxx",
   "//device/soc/broadcom/hardware/gpu:vc4_dri",
   "//device/soc/broadcom/hardware/gpu:v3d_dri",
   "//device/soc/broadcom/hardware/gpu:mesa3d-common",
  ]
}
if (defined(ohos_lite)) {
# do something
} else {
# do something
}
